fix(builder-toolbox): Hide on small screens
This commit fixes an small visual bug that keeps open the sidebar on small screens.

--- a/src/assets/scss/builder/_builder-toolbox.scss
+++ b/src/assets/scss/builder/_builder-toolbox.scss
@@ -70,6 +70,8 @@
 	}
 
 	@include modifier(active) {
-		display: block;
+		@include bp(min-width, md) {
+			display: block;
+		}
 	}
 }
